# drift-vaults

./: .clippy.toml  .eslintignore  .gitignore  .gitmodules  AUDIT.md  Anchor.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.sh  devnet-deploy.sh  jest.config.js  package.json  rust-toolchain.toml  test.sh  tsconfig.json
.cargo/: config.toml
.husky/: pre-commit
docs/: spot-e2e-coverage-handoff.md
macros/: Cargo.toml
programs/drift_vaults/: Cargo.toml
programs/drift_vaults/src/: constants.rs  cpi.rs  drift_cpi.rs  error.rs  lib.rs  macros.rs  test_utils.rs  tests.rs  token_cpi.rs  validation.rs
programs/drift_vaults/src/cpi/: drift.rs  mod.rs  token.rs
programs/drift_vaults/src/instructions/: add_insurance_fund_stake.rs  admin_delete_fee_update.rs  admin_deposit.rs  admin_init_fee_update.rs  admin_update_vault_class.rs  admin_withdraw.rs  apply_profit_share.rs  apply_rebase.rs  apply_rebase_tokenized_depositor.rs  cancel_request_remove_insurance_fund_stake.rs  cancel_withdraw_request.rs  constraints.rs  delete_vault.rs  deposit.rs  force_withdraw.rs  initialize_competitor.rs  initialize_insurance_fund_stake.rs  initialize_tokenized_vault_depositor.rs  initialize_vault.rs  initialize_vault_depositor.rs  initialize_vault_with_protocol.rs  liquidate.rs  manager_borrow.rs  manager_burn_shares.rs  manager_cancel_fee_update.rs  manager_cancel_withdraw_request.rs  manager_crank_profit_share.rs  manager_deposit.rs  manager_init_fee_update.rs  manager_repay.rs  manager_request_withdraw.rs  manager_update_borrow.rs  manager_update_fees.rs  manager_update_fuel_distribution_mode.rs  manager_withdraw.rs  mod.rs  protocol_cancel_withdraw_request.rs  protocol_request_withdraw.rs  protocol_withdraw.rs  redeem_tokens.rs  (+16 more)
programs/drift_vaults/src/math/: vault_depositor.rs  vault_depositor_shares.rs
programs/drift_vaults/src/state/: account_maps.rs  events.rs  fee_update.rs  math.rs  mod.rs  tokenized_vault_depositor.rs  traits.rs  vault.rs  vault_depositor.rs  vault_protocol.rs  withdraw_request.rs  withdraw_unit.rs
tests/: depositMax.test.ts  drift-vaults.ts  driftProtocolVaults.ts  driftVaults.ts  feeUpdate.test.ts  fuelDistribution.test.ts  managerUpdate.test.ts  sharesExamples.test.ts  shit.ts  testHelpers.ts  vaultPhoenix.ts  (+2 more)
(+118 files in other folders)
